<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Timeline!</string>
    <string name="app_name">BioSense</string>
    <string name="titleLogin">Login username</string>
    <string name="descLogin">Please enter Gmail account login</string>
    <string name="titlePassword">Password</string>
    <string name="descPassword">Please enter password</string>
    <string name="titlePrefs">Preferences</string>
    <string name="secure_connect">Secure Connect</string>
    <string name="insecure_connect">Insecure Connect</string>
    <string name="discoverable">Discoverable</string>
    <string name="button_scan">Scan Devices</string>

    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="none_paired">No devices paired</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select Device</string>
    <string name="none_found">No devices found</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_connected_to">Connected to <xliff id="device_name">%1$s</xliff></string>
    <string name="title_not_connected">Not connected</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving BioSense.</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="send">Send</string>
    <string name="titleItemStartService">Update GDocs</string>
    <string name="msgSetupPrefs">Please set Google username and password.</string>
    <string name="textServiceRunning">Service is already running</string>
    <string name="descCollab">Check to share you google spreadsheets results with a collaborator</string>
    <string name="titleColab">Share with collaborator</string>
    <string name="descCollabEmail">Please add email of collaborator who you would like to share with (Google Account)</string>
    <string name="titleCollabEmail">Collaborator Email (Google Account)</string>
    <string name="clearResults">Clear Results</string>
    <string name="notifServiceIsRunning">Cannot clear results because they are currently being uploaded.</string>
    <string name="notifResultsDeleted">Results have been cleared from mobile device memory.</string>
    <string name="notifNoData">No results available to delete.</string>
    <string name="textNothingToUpdate">There is nothing left to update.</string>
    <string name="titleItemStopService">Stop Upload</string>
    <string name="textNoNetwork">No network connection.</string>
    <string name="titleChartActivity">Recorded Results Chart</string>
    <string name="notifNoAvailableData">No results available to graph.</string>
 
</resources>
